kegs and cups added

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,9 +1,7 @@
 <div class="m-4">
-<h1><a href=<%= log_in_path %> class="btn btn-info btn-lg" role="button" aria-pressed="true">Log In</a></h1>
+<h1><a href=<%= log_in_path %> <class="btn btn-info btn-lg" role="button" aria-pressed="true">Log In</a></h1>
 </div>
 
 <div class="ml-3">
-<h1><a href=<%= sign_up_path %> class="btn btn-info btn-lg" role="button" aria-pressed="true">Sign Up</a></h1>
+<h1><a href=<%= sign_up_path %> <class="btn btn-info btn-lg" role="button" aria-pressed="true">Sign Up</a></h1>
 </div>
-
-
