request buttons to grey

--- a/app/views/requests/feedback.html.erb
+++ b/app/views/requests/feedback.html.erb
@@ -1,3 +1,4 @@
+<div class="m-4">
 <h1>Nice work!</h1>
 
 <h4>Help out your snaggers 👍</h4>
@@ -36,8 +37,9 @@
 
       <%= radio_button_tag(:cups, "Bring your own") %>
       <%= label_tag(:cups_Bring_your_own, "Bring your own") %> <br>
-
+      <br>
       <%= submit_tag "Submit", class: 'btn btn-success btn-lg' %>
     <%end%>
+</div>
 </div>
 
