--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,19 +1,20 @@
 <div class="m-4">
 <h1>Thanks for snagging that!</h1>
-
-<p>
+<br>
+<h4>
   <%= @requester.name %> is in <%= @location.name %>, waiting anxiously.
-</p>
+</h4>
+<br>
 <%= form_tag(request_path, method:"patch") do %>
     <%= hidden_field_tag :id, @request.id %>
     <%= hidden_field_tag "request[status]", "closed" %>
-    <%= submit_tag "Beer Delivered" %>
+    <%= submit_tag "Beer Delivered", class: 'btn btn-success btn-lg' %>
   <%end%>
-
+  <br>
   <%= form_tag(request_path, method:"patch") do %>
     <%= hidden_field_tag :id, @request.id %>
     <%= hidden_field_tag "request[status]", "bailed" %>
-    <%= submit_tag "Sorry, can't Snag it!" %>
+    <%= submit_tag "Sorry, can't Snag it!", class: 'btn btn-danger btn-lg' %>
   <%end%>
   </div>
 
