--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,5 @@
 <div class="m-4">
-<h1>Beers</h1>
+<h2>BEERS</h2>
 
 <% if current_user.currently_requesting %>
   <p><a href="/requests/new" class="btn btn-info btn-lg" role="button" aria-pressed="true">Request a Beer!</a></p>
