--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,7 +1,13 @@
 <div class="m-4">
-<h1><a href=<%= log_in_path %> <class="btn btn-info btn-lg" role="button" aria-pressed="true">Log In</a></h1>
+
+<h1>Welcome to Snag!</h1>
+<h3>We asdlfkjaslfdkjaklfjlkasdjjlkfdjlaksdjlkasdjfk;ajdsf;k</h3>
+
+<br>
+
+<a class="btn btn-info btn-lg" role="button" aria-pressed="true" href= <%= log_in_path %>>Log In</a>
 </div>
 
 <div class="ml-3">
-<h1><a href=<%= sign_up_path %> <class="btn btn-info btn-lg" role="button" aria-pressed="true">Sign Up</a></h1>
+<a class="btn btn-info btn-lg" role="button" aria-pressed="true" href=<%= sign_up_path %>> Sign Up</a>
 </div>
