--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,11 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree 
+ *= require_tree
  *= require_self
  */
 
- 
+
 
     body {
         background: image-url('beer-wallpaper.jpg');
@@ -27,4 +27,10 @@
         background-clip: initial;
         height: 100%;
     }
+
+    .h1a {
+        display: inline;
+        margin: 10px;
+    }
+
 
