--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,7 @@
 
     body {
         background: image-url('beer-wallpaper.jpg');
-        background-position-x: 90%;
-        background-position-y: -50%;
+        background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
