--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,11 +25,18 @@
         background-origin: initial;
         background-clip: initial;
         height: 100%;
+        padding-bottom: 200px;
     }
 
     .h1a {
         display: inline;
         margin: 10px;
+    }
+
+    .margins {
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 10px;
     }
 
 
