--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,4 +1,4 @@
-<div class="m-4"></div>
+<div class="margins"></div>
 <h1>Welcome to Snag</h1>
 
 <table class="table table-borderless" style="width:50%">
