--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="m-4">
+<div class="margins">
 <div class="text-left" style="width: 600px;">
 <h1>Create an Account </h1> 
 <p><a href="/sessions/new" class="btn btn-secondary" role="button" aria-pressed="true">Log In</a></p>
