--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
-<div class="m-4">
+<div class="margins">
 <h1>Welcome to Snag!</h1>
 <h5>Snag is a convenient way to encourage teamwork, <br> and ensure that your colleagues are suitably hydrated after 3 PM.</h5>
   <h1 class="h1a"><a href=<%= log_in_path %> <button class="btn btn-info btn-lg" role="button" aria-pressed="true">Log In</a></h1>
