--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,43 +20,43 @@
 
   <body>
       <nav class="navbar navbar-expand-lg navbar sticky-top navbar navbar-dark bg-dark">
-        <% if logged_in? %>
-          <a class="navbar-brand" href=<%= requests_path %>>SNAG</a>
-        <% else %>
-          <a class="navbar-brand" href=<%= log_in_path %>>SNAG</a>
-        <%end%>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href=<%= beers_path %>>Beers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= new_request_path %>>Request a Beer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= requests_path %>>Snag a beer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=<%= leaderboards_path %>>Leaderboards</a>
-            </li>
-            <% if logged_in? %>
+          <% if logged_in? %>
+            <a class="navbar-brand" href=<%= requests_path %>>SNAG</a>
+          <% else %>
+            <a class="navbar-brand" href=<%= log_in_path %>>SNAG</a>
+          <%end%>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href=<%= log_out_path %>>Logout</a>
+                <a class="nav-link" href=<%= beers_path %>>Beers</a>
               </li>
-            <%else%>
               <li class="nav-item">
-                <a class="nav-link" href=<%= sign_up_path %>>Login/Sign Up</a>
+                <a class="nav-link" href=<%= new_request_path %>>Request a Beer</a>
               </li>
-            <%end%>
-          </ul>
-        </div>
+              <li class="nav-item">
+                <a class="nav-link" href=<%= requests_path %>>Snag a beer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href=<%= leaderboards_path %>>Leaderboards</a>
+              </li>
+              <% if logged_in? %>
+                <li class="nav-item">
+                  <a class="nav-link" href=<%= log_out_path %>>Logout</a>
+                </li>
+              <%else%>
+                <li class="nav-item">
+                  <a class="nav-link" href=<%= sign_up_path %>>Login/Sign Up</a>
+                </li>
+              <%end%>
+            </ul>
+          </div>
       </nav>
 
       
-    <div class="m-4">
+    <div class="margins">
       <% if flash.any? %>
         <% flash.each do |type, message| %>
           <ul>
