--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
     <%= stylesheet_link_tag "application"%>
     
-   
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
  
 
@@ -56,7 +59,7 @@
       </nav>
 
       
-    <div class="margins">
+  <div class="margins-for-errors">
       <% if flash.any? %>
         <% flash.each do |type, message| %>
           <ul>
@@ -72,10 +75,11 @@
           <% end %>
         <% end %>
         <% flash.delete(:error) %>
-    </div>
+   </div>
 
-
+  <div class="margins fixed-type-scroller">
     <%= yield %>
+  </div>
   </body>
 </html>
 
