--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
 <div class="margins">
+<div class="text-left" style="width: 300px;">
 <%= form_for @user do |f| %>
   <div class="form-group">
     <%= f.label :username %>
@@ -28,4 +29,5 @@
   <%= f.submit 'Register', class: 'btn btn-info btn-lg' %> 
   
 <% end %>
+</div>
 </div>
