--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,13 +4,13 @@
   <p><a href="/requests/new" class="btn btn-info btn-lg" role="button" aria-pressed="true">Request a Beer!</a></p>
 <%end%>
 
-<table class="table table-borderless" style="width:30%">
+<table class="table table-borderless table table-sm" style="width:50%">
   <thead>
     <tr>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
+      <th class="w-15"></th>
+      <th class="w-10"></th>
+      <th class="w-5"></th>
+      <th class="w-75"></th>
     </tr>
   </thead>
   <tbody>
@@ -24,3 +24,4 @@
     <%end%>
   </tbody>
 </table>
+</div>
