--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,4 +49,20 @@
         padding-top: 8px;
     }
 
+    .w-10 {
+        width: 10% !important;
+    }
+
+    .w-15 {
+        width: 15% !important;
+    }
+
+    .w-20 {
+        width: 20% !important;
+    }
+
+    .w-5 {
+        width: 5% !important;
+    }
+
 
