login-logout buttons to the right

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item">
                 <a class="nav-link" href=<%= beers_path %>>Beers</a>
               </li>
@@ -45,16 +45,20 @@
               <li class="nav-item">
                 <a class="nav-link" href=<%= leaderboards_path %>>Leaderboards</a>
               </li>
+            </ul>
               <% if logged_in? %>
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link" href=<%= log_out_path %>>Logout</a>
                 </li>
+              </ul>
               <%else%>
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <a class="nav-link" href=<%= sign_up_path %>>Login/Sign Up</a>
                 </li>
+              <ul>
               <%end%>
-            </ul>
           </div>
       </nav>
 
