--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -16,7 +16,7 @@
 
     <%= f.hidden_field :requester_id, value:current_user.id %>
     <%= f.hidden_field :status, value:"open" %>
-  <%= f.submit, class: 'btn btn-info btn-lg' %>
+  <%= f.submit "Submit", :class => 'btn btn-info btn-lg' %>
 
 <% end %>
 </div>
