--- a/app/views/welcome/closed.html.erb
+++ b/app/views/welcome/closed.html.erb
@@ -1,4 +1,4 @@
 <div class="margins">
-<a href=root><img src="/img/61392.png" alt="The bar is closed" height=400></img></a>
+<a href=<%= requests_path %>><img src="/img/61392.png" alt="The bar is closed" height=400></img></a>
 <h4>The bar is closed, sorry!  Please come back at 3 PM.</h4>
 </div>
