--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,55 +14,56 @@
  *= require_self
  */
 
+body {
+  background: image-url("beer-wallpaper.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-origin: initial;
+  background-clip: initial;
+  height: 100%;
+  padding-bottom: 200px;
+}
 
+.h1a {
+  display: inline;
+  margin: 10px;
+}
 
-    body {
-        background: image-url('beer-wallpaper.jpg');
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-origin: initial;
-        background-clip: initial;
-        height: 100%;
-        padding-bottom: 200px;
-    }
+.margins {
+  padding-left: 10px;
+  padding-right: 30px;
+  padding-top: 10px;
+}
 
-    .h1a {
-        display: inline;
-        margin: 10px;
-    }
+.fixed-type-scroller {
+  height: 70vh;
+  overflow-y: auto;
+}
 
-    .margins {
-        padding-left: 10px;
-        padding-right: 30px;
-        padding-top: 10px;
-    }
+.margins-for-errors {
+  padding-left: 8px;
+  padding-top: 8px;
+}
 
-    .fixed-type-scroller {
-        height: 70vh;
-        overflow-y: auto;
-    }
+.w-10 {
+  width: 10% !important;
+}
 
-    .margins-for-errors {
-        padding-left: 8px;
-        padding-top: 8px;
-    }
+.w-15 {
+  width: 15% !important;
+}
 
-    .w-10 {
-        width: 10% !important;
-    }
+.w-20 {
+  width: 20% !important;
+}
 
-    .w-15 {
-        width: 15% !important;
-    }
+.w-5 {
+  width: 5% !important;
+}
 
-    .w-20 {
-        width: 20% !important;
-    }
-
-    .w-5 {
-        width: 5% !important;
-    }
-
-
+.rounded-corners-gradient-borders {
+  border: double 2px transparent;
+  border-radius: 120px;
+}
